# Cephalophy_production

cephalopy_package/: .dockerignore  .gitignore  Dockerfile  README.md  exctract_credentials.py  pyproject.toml
cephalopy_package/frontend/: .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
cephalopy_package/frontend/src/: App.css  App.tsx  index.css
cephalopy_package/frontend/src/components/analysis/: ActiveModelBanner.tsx  CephalometricAnalysis.tsx  LandmarkCorrection.tsx  LandmarkDetection.tsx  ManualDetection.tsx  NewModelsNotification.tsx  ReportPreview.tsx
cephalopy_package/frontend/src/components/canvas/: LandmarkCanvas.tsx
cephalopy_package/frontend/src/pages/: AboutPage.tsx  AnalysisPage.css  AnalysisPage.tsx  GettingStartedPage.tsx  LandingPage.tsx  ModelComparisonPage.tsx  ModelDetailPage.tsx  ModelRetrainingPage.tsx  ModelsPage.tsx
cephalopy_package/frontend/src/services/: api.ts
cephalopy_package/frontend/src/stores/: landmarkStore.ts
cephalopy_package/frontend/src/types/: index.ts  retraining.ts
cephalopy_package/frontend/src/utils/: cephalometric.ts
cephalopy_package/src/: .coverage
cephalopy_package/src/api/: main.py
cephalopy_package/src/api/core/: README.md  config.py  dependencies.py  models.py  preprocessing.py  retraining_service.py  retraining_wrapper.py
cephalopy_package/src/api/endpoints/: README.md  data.py  eval.py  health.py  models.py  predictions.py  retraining.py
cephalopy_package/src/api/schemas/: README.md  __init__.py  eval.py  prediction.py  retraining.py
cephalopy_package/src/cephalopy/data/: README.md  preprocessing.py  process_class.py  quality.py
